# docs/swagger.json
@@ -8,6 +8,23 @@
     },
     "host": "localhost:8080",
     "paths": {
+        "/countries/all": {
+            "get": {
+                "description": "get all countries",
+                "tags": [
+                    "Countries"
+                ],
+                "summary": "get all countries",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.countryResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "post": {
                 "description": "create new user",
@@ -33,8 +50,8 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.User"
                         }
@@ -47,13 +64,60 @@
                     }
                 }
             }
+        },
+        "/users/all": {
+            "get": {
+                "description": "get all users",
+                "tags": [
+                    "Users"
+                ],
+                "summary": "return list of all users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.userResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "handlers.countryResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Country"
+                    }
+                }
+            }
+        },
         "handlers.errResponse": {
             "type": "object",
             "properties": {
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.userResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.User"
+                    }
+                }
+            }
+        },
+        "model.Country": {
+            "type": "object",
+            "properties": {
+                "name": {
                     "type": "string"
                 }
             }
